--- a/jobs_styles.css
+++ b/jobs_styles.css
@@ -21,3 +21,13 @@ body {
     color: #cccccc;
     line-height: 1.6;
 }
+
+/*General Styling for Footer and Header*/
+
+header, footer{
+    clear: both;
+    margin: 0em;
+    padding: 0.3em;
+    background-color:  #2a2a2a;
+    border: 1px solid #333333;
+}
