--- a/jobs_styles.css
+++ b/jobs_styles.css
@@ -122,3 +122,36 @@ hr {
     border: 0.5px solid #333333;
     margin: 2em 0em;
 }
+
+/*Sidebar Styling*/
+
+.sidebar {
+    width: 25%;
+    float: right;
+    padding: 0.5em 0.5em 0.5em;
+    margin: 4em 0.5em 0em 0.5em;
+    border-radius: 1em;
+    background-color: #333333;
+}
+
+.sidebar h2 {
+    color: #00aaff;
+    font-size: 18px;
+    margin: 0.5em 0.5em 0em;
+    padding: 0em;
+}
+
+.sidebar li {
+    margin: 0.3em 0em;
+    padding: 0em;
+    list-style-type: disc;
+}
+
+.sidebar a {
+    text-decoration: none;
+    color: #cccccc;
+}
+.sidebar a:hover {
+    color: #00aaff;
+    text-decoration: underline;
+}
