--- a/jobs_styles.css
+++ b/jobs_styles.css
@@ -118,7 +118,7 @@ main h2 {
 
 /* Styling the Horizontal Line*/
 hr {
-    width: 70;
+    width: 70%;
     border: 0.5px solid #333333;
     margin: 2em 0em;
 }
