--- a/jobs_styles.css
+++ b/jobs_styles.css
@@ -6,7 +6,7 @@ Author: Disha Anchan
 
 Created: 11/09/2025
 
-Last modified: 23/09/2025
+Last modified: 25/09/2025
 
 Description: CSS sheet for jobs.html
 */
@@ -22,8 +22,9 @@ body {
     line-height: 1.6;
 }
 
-/*General Styling for Footer and Header*/
+/*  ======================  Header Styling  ====================== */
 
+/* ----- Header layout ----- */
 .header {
     display: flex;
     justify-content: space-around;
@@ -32,13 +33,17 @@ body {
     border: 1px solid #233142;
 }
 
-/* Header Styling*/
+
+/*  ===========  Panda Mice Logo and Title Styling  =========== */
+
+/* ----- Container for Brand  ----- */
 .header-inner {
     display: flex;
     align-items: center; 
     justify-content: space-between;
 }
 
+/* -----  Hyperlink Styling ----- */
 .header-brand {
     display: inline-flex; 
     align-items: end;
@@ -47,19 +52,28 @@ body {
     color: #e7edf5;
 }
 
+.header-brand:hover {
+    color: #a4f3fd;
+}
+
+/* -----  Container for Company name and Slogan ----- */
 .header-text { 
     display: grid;
 }
 
+/* -----  Company Name Styling ----- */
 .header-name { 
     font-weight: 700; 
     letter-spacing: 0.2px; 
 }
+
+/* -----  Company Name Styling ----- */
 .header-slogan { 
     font-size: 0.9rem; 
     color: #a8b3c7
 }
 
+/*  ===========  Navigation Menu Styling  =========== */
 .menu {
     display: flex;
     justify-content: space-between;
@@ -101,7 +115,7 @@ body {
 
 }
 
-/*Main Content Styling*/
+/*  ===========  Main Content Styling  =========== */
 
 main {
     margin: 0em;
@@ -117,7 +131,7 @@ main h1 {
     font-size: 28px;
 }
 
-/*Aside  Element Styling*/
+/*  ===========  "Why Join Us?" Section Styling  =========== */
 
 .join-us {
     width: 25%;
@@ -142,7 +156,7 @@ main h1 {
     list-style-type: disc;
 }
 
-/* Job Description Layout */
+/*  ===========  Job Description Layout Styling  =========== */
 
 .job-position {
     width: 70%;
@@ -158,23 +172,27 @@ main h1 {
     padding: 0em;
 }
 
+
 .job-details h3, .job-desc h3, .key-resp h3, .job-req h3, .job-req h4 {
     color:  #e7edf5;
     font-size: 20px;
     margin: 1em 1em 0.5em;
 }
 
+/*  ===========  "Job Details" Section Styling  =========== */
 .job-details strong {
     color:  #e7edf5;
     margin: 0em 0.5em 0em 1em;
     
 }
 
+/*  ===========  "Key Responsibilities" Section  Styling  =========== */
 .key-resp ol {
     margin: 0em 3em;
     padding: 0em 2em;
 }
 
+/*  ===========  "Job Requirements" Section Styling  =========== */
 .job-req h5 {
     color:  #e7edf5;
     font-size: 18px;
@@ -189,7 +207,7 @@ main h1 {
     margin: 0em 1em;
 }
 
-/* Apply now Button */
+/*  ===========  "Apply Now" Button Styling  =========== */
 
 .apply-btn {
     display: inline-block;
@@ -214,7 +232,7 @@ main h1 {
     color: #233142;
 }
 
-
+/*  ===========  Footer Section Styling Styling  =========== */
 
 .footer {
     background-color:  #0f1626;
@@ -248,7 +266,7 @@ main h1 {
         color: #00e5ff
     }
 
-/* Media Query for responsive design */
+/*  ===========  Media Query for Responsive page  =========== */
 @media (max-width: 650px) {
 
 
