style(jobs): style back to original design

--- a/jobs_styles.css
+++ b/jobs_styles.css
@@ -52,6 +52,7 @@ body {
     color: #e7edf5;
 }
 
+/* -----  Hyperlink when hover Styling ----- */
 .header-brand:hover {
     color: #a4f3fd;
 }
@@ -74,6 +75,7 @@ body {
 }
 
 /*  ===========  Navigation Menu Styling  =========== */
+/* -----  Menu Layout Styling ----- */
 .menu {
     display: flex;
     justify-content: space-between;
@@ -84,9 +86,12 @@ body {
 }
 
 .menu ul{
-    display: contents;
+    display: contents;              /* this hides the element and make .menu element the parent of the li elements */
 }
 
+/*  ===========  Navigation Links Styling  =========== */
+
+/* -----  Menu Layout Styling ----- */
 .menu li {
     display: inline-flex;
     list-style-type: none;
@@ -94,11 +99,13 @@ body {
     padding: 0em;
 }
 
+/* -----  Highlights the current page on the navigation menu ----- */
 .menu li:nth-child(2) {
     border: #00e5ff 2px solid;
     border-radius: 0.5em;
 }
 
+/* ----- Navigation Hyperlinks ----- */
 .menu a {
     display: block;
     text-decoration: none;
@@ -108,6 +115,7 @@ body {
     padding: 0.3em 0.75em;
 }
 
+/* ----- Navigation Hyperlinks when Hovered ----- */
 .menu a:hover {
     color: #90c5cb;
     background-color: #233142;
@@ -117,6 +125,7 @@ body {
 
 /*  ===========  Main Content Styling  =========== */
 
+/* ----- Main Layout Styling ----- */
 main {
     margin: 0em;
     padding: 2em 2em 0.5em;
@@ -124,25 +133,31 @@ main {
     border: 1px solid #233142;
 }
 
+/* ----- Main Header Section ----- */
 main h1 {
-    display: inline-block;
+    display: block;
     color:  #e7edf5;
     margin: 0.5em 0em;
-    font-size: 28px;
+    font-size: 30px;
 }
+
 
 /*  ===========  "Why Join Us?" Section Styling  =========== */
 
+/* ----- Container for "Why join Us" Section ----- */
+
+
+/* ----- "Why join Us" Aside Section ----- */
 .join-us {
     width: 25%;
     float: right;
-    padding: 0.5em 0.5em 0.5em;
-    margin: 4em 0.5em 0em 0.5em;
     border-radius: 1em;
     background-color:#0a0f1a;
     border: #00e5ff 1px solid;
+
 }
 
+/* ----- "Why join Us" Aside Heading Styling ----- */
 .join-us h2 {
     color: #e7edf5;
     font-size: 18px;
@@ -150,6 +165,7 @@ main h1 {
     padding: 0em;
 }
 
+/* ----- "Why join Us" Aside Reasons Styling ----- */
 .join-us li {
     margin: 0.3em 0em;
     padding: 0em;
@@ -158,12 +174,16 @@ main h1 {
 
 /*  ===========  Job Description Layout Styling  =========== */
 
+/* ----- Container for "Job Description" Section ----- */
+
 .job-position {
     width: 70%;
     margin: 0em;
     padding: 0em 1em;
+
 }
 
+/* ----- Job Description Main Heading ----- */
 .job-position h2 {
     color: #e7edf5;
     display: inline-block;
@@ -172,7 +192,7 @@ main h1 {
     padding: 0em;
 }
 
-
+/* ----- Job Description Subsection Heading ----- */
 .job-details h3, .job-desc h3, .key-resp h3, .job-req h3, .job-req h4 {
     color:  #e7edf5;
     font-size: 20px;
@@ -180,6 +200,8 @@ main h1 {
 }
 
 /*  ===========  "Job Details" Section Styling  =========== */
+
+/* Styling for Reference Number, Salary and Reporting Line Heading */
 .job-details strong {
     color:  #e7edf5;
     margin: 0em 0.5em 0em 1em;
@@ -187,12 +209,15 @@ main h1 {
 }
 
 /*  ===========  "Key Responsibilities" Section  Styling  =========== */
+
+/*  */
 .key-resp ol {
     margin: 0em 3em;
     padding: 0em 2em;
 }
 
 /*  ===========  "Job Requirements" Section Styling  =========== */
+
 .job-req h5 {
     color:  #e7edf5;
     font-size: 18px;
@@ -238,7 +263,7 @@ main h1 {
     background-color:  #0f1626;
     border: 1px solid #233142;
     padding: 0.5em;
-    
+    margin: 2em;;
     display: grid;
     grid-template-columns: 33% 33% 33%;
     grid-gap: 5px;
@@ -253,12 +278,12 @@ main h1 {
     }
 
     .footer-inner { 
-        padding: 1rem 0 2rem; 
+        padding: 1em 0em 2em; 
     }
     .footer-links { 
         list-style: none; 
         padding: 0; 
-        margin: 0.25rem 0 0; 
+        margin: 0.25em 0em 0em; 
         display: flex; 
         gap: 1rem;
     }
@@ -268,6 +293,10 @@ main h1 {
 
 /*  ===========  Media Query for Responsive page  =========== */
 @media (max-width: 650px) {
+
+    .header {
+        display: grid;
+    }
 
 
 }
